--- a/readme.mkd
+++ b/readme.mkd
@@ -1,1 +1,31 @@
 # HTTP Server
+
+Web server that handles requests from the browser to `localhost` hostname and `5000` port.
+
+
+Endpoints configured:
+
+`GET` and `HEAD`
+for `/simple_get`
+
+`GET`
+for `/redirect`
+
+`HEAD` and `OPTIONS`
+for `/get_with_body`
+
+`GET`, `HEAD` and `OPTIONS`
+for `/method_options`
+
+`GET`, `HEAD`, `PUT`, `POST` and `OPTIONS`
+for `/method_options2`
+
+`POST`
+for `/echo_body`
+
+
+
+It has also an acceptance suite implemented: 
+
+To run it, make sure you have your server running on port 5000 
+In a separate tab/terminal window, type `bundle exec spinach` to run the tests.
